--- a/src/Soenneker.Controllers.Health.csproj
+++ b/src/Soenneker.Controllers.Health.csproj
@@ -14,7 +14,7 @@
         <AssemblyName>Soenneker.Controllers.Health</AssemblyName>
         <PackageId>Soenneker.Controllers.Health</PackageId>
         <PackageTags>controllers health controller healthcontroller check online offline util csharp dotnet c# .net</PackageTags>
-        <Copyright>Copyright © 2025 Jake Soenneker</Copyright>
+        <Copyright>Copyright © 2025-2026 Jake Soenneker</Copyright>
         <Authors>Jake Soenneker</Authors>
         <Company>https://soenneker.com</Company>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
